--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Ccompatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <title>Portafolio Digital</title>
 </head>
 
@@ -37,14 +38,14 @@
     </script>    
 
     <!-- Zona central de la primer pagina -->
-    <section id="zona1">
+<!--     <section id="zona1">
         <div class="presentacion">
             <h1>La Revolución Informatica:</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
             <p class="renglon2">revolución digital que está</p>
             <p class="renglon3">redefiniendo nuestro mundo.</p>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- Seccion "sobre mi"  -->
