Mas actualizacion sobre medias query

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Ccompatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <title>Portafolio Digital</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="./img/NewSoft.png" alt="Imagen Logo" class="logo">
+            <img src="./img/NewSoft.png" class="logo" alt="Imagen Logo">
             <span class="nombre">Porfolio Digital</span>
         </a>
         <ul>
@@ -38,14 +38,14 @@
     </script>    
 
     <!-- Zona central de la primer pagina -->
-<!--     <section id="zona1">
+    <section id="zona1">
         <div class="presentacion">
             <h1>La Revolución Informatica:</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
             <p class="renglon2">revolución digital que está</p>
             <p class="renglon3">redefiniendo nuestro mundo.</p>
         </div>
-    </section> -->
+    </section>
 
 
     <!-- Seccion "sobre mi"  -->
