--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Portafolio Digital</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://www.fontspace.com/avengeance-font-f13706" rel="stylesheet">  <!-- tipo de los ADVENGERS -->
 </head>
 
 <body>
@@ -18,7 +22,7 @@
         </label>
         <a href="#" class="enlace">
             <img src="./img/NewSoft.png" class="logo" alt="Imagen Logo">
-            <span class="nombre">Porfolio Digital</span>
+            <span class="main-name">Porfolio Digital</span>
         </a>
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -40,7 +44,7 @@
     <!-- Zona central de la primer pagina -->
     <section id="zona1">
         <div class="presentacion">
-            <h1>La Revolución Informatica:</h1>
+            <h1>La Revolución Informatica</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
             <p class="renglon2">revolución digital que está</p>
             <p class="renglon3">redefiniendo nuestro mundo.</p>
@@ -54,14 +58,16 @@
             <h2>Sobre mí</h2>
             <div class="sobremi-content">
                 <img src="./img/telegram_logo.png" alt="Mi foto de perfil">
-                <p class="nosoyrobot">No soy un Robot, soy un desarrolador 
-                    Full Stack. Apacionado por el diseño Web y la Programación.</p>
-                <p class="historiamia">He estudiado una carrera de Ingeniería
-                    de Sistemas (hasta 3er año), donde he visto lenguajes de 
-                    programacion como Turbo Pascal, RmCobol y Visual FoxPro 9 
-                    (este último, lo sigo viendo en la actualidad).</p>
-                <p class="actualidad">Hoy estoy incursionando en el sesarrollo
-                    Web Full Stack, con HTML, CSS, BOOTSTRAP, JAVASCRIP, JAVA y MYSQL.</p>
+
+                <p class="historiamia">¡Hola!, soy un apasionado desarrollador Full Stack con experiencia tanto en diseño web 
+                    como en programación. Mi formación incluye estudios en Ingeniería de Sistemas (hasta 3er año), donde adquirí 
+                    conocimientos de diversos lenguajes de programación como Turbo Pascal, RmCobol y Visual FoxPro 9, este último 
+                    del cual continúo manteniéndome actualizado en la actualidad.</p>
+                <p class="actualidad">Actualmente, me estoy especializando en el desarrollo web Full Stack, trabajando con 
+                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java y MySQL. Me encanta explorar nuevas herramientas 
+                    y tecnologías para mejorar mis habilidades y ofrecer soluciones innovadoras a los desafíos de desarrollo web.</p>
+
+<!--                 <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
             </div>
         </div>
     </section>
@@ -92,15 +98,15 @@
         <h2 class="titulo-form">FORMULARIO DE CONTACTO</h2>
         <!-- <form action="./php/enviar.php" method="post"> -->
         <form action="https://formsubmit.co/jle36@hotmail.com" method="POST" target="_blank">		
-            <p class="anotate">Puedes hacernos llegar tu inquietud a traves de <abbr title="attribute">este</abbr> formulario!</p>
-            <input type="text" name="Nombre" placeholder="&#128102; Nombre" pattern="[a-zA-Z' ]*" required>
-            <input type="text" name="Apellido" placeholder="&#129489; Apellido" pattern="[a-zA-Z' ]*" required>
+            <p class="anotate">Puedes hacerme llegar tu inquietud a traves de <abbr title="attribute">este</abbr> formulario!</p>
+            <input class="nombre" type="text" name="Nombre" placeholder="Nombre" pattern="[a-zA-Z' ]*" required>
+            <input class="apellido" type="text" name="Apellido" placeholder="Apellido" pattern="[a-zA-Z' ]*" required>
             <!-- <input type="tel" name="Telefono" pattern="\d{3}-\d{4}-\d{4}" placeholder="Telefono" required> --->
-            <input type="tel" name="Telefono" placeholder="&#128383; Telefono" pattern="[a-zA-Z0-9' ]*" required>
-            <input type="email" name="Correo" placeholder="&#128231; Correo" minlength="8" required>
-            <textarea name="mensaje" placeholder="&#128209; Escriba aqui su mensaje" minlength="8" required></textarea>
+            <input type="tel" name="Telefono" placeholder="Telefono" pattern="[a-zA-Z0-9' ]*" required>
+            <input class="email" type="email" name="Correo" placeholder="Correo" minlength="8" required>
+            <textarea name="mensaje" placeholder="Escriba aqui su mensaje" minlength="8" required></textarea>
             
-            <input type="submit" id="boton" title="Clic para enviar el mail" value="&#128234; ENVIAR">
+            <input type="submit" id="boton" title="Clic para enviar el mail" value="ENVIAR">
         </form>
     </section>
 
@@ -110,9 +116,9 @@
         <div class="container">
             <p class="mimail">jle36@hotmail.com - Cel. +54-3487-616158</p>
             <ul class="social-links">
-                <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin">LinkedIn</a></li>
-                <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub">GitHub</a></li>
-                <li><a href="https://www.facebook.com/joseluis.espinola1" title="Ir a Facebook">Facebook</a></li>
+                <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub" target="_blank">GitHub</a></li>
+                <li><a href="https://www.facebook.com/joseluis.espinola1" title="Ir a Facebook" target="_blank">Facebook</a></li>
             </ul>
         </div>
         <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p>
