Algunos arreglos en el nabvar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="./img/NewSoft.png" class="logo" alt="Imagen Logo">
+            <img src="./img/NewSoft3.jpg" class="logo" alt="Imagen Logo">
             <span class="main-name">Porfolio Digital</span>
         </a>
         <ul>
@@ -44,13 +44,13 @@
     <!-- Zona central de la primer pagina -->
     <section id="zona1">
         <div class="presentacion">
+            <h2 class="loader"></h2>
             <h1>La Revolución Informatica</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
             <p class="renglon2">revolución digital que está</p>
             <p class="renglon3">redefiniendo nuestro mundo.</p>
         </div>
     </section>
-
 
     <!-- Seccion "sobre mi"  -->
     <section id="sobremi">
