Trabajando con fotograma en el titulo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </label>
         <a href="#" class="enlace">
             <img src="./img/NewSoft3.jpg" class="logo" alt="Imagen Logo">
-            <span class="main-name">Porfolio Digital</span>
+            <span class="main-name">Portfolio</span>
         </a>
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -43,9 +43,10 @@
 
     <!-- Zona central de la primer pagina -->
     <section id="zona1">
+        <div class="circle"></div>
         <div class="presentacion">
             <h2 class="loader"></h2>
-            <h1>La Revolución Informatica</h1>
+            <h1>La Programación</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
             <p class="renglon2">revolución digital que está</p>
             <p class="renglon3">redefiniendo nuestro mundo.</p>
