Ajuste fondo de pantalla principal y nuevas card de proyectos responsive

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="#sobremi">Sobre Mi</a></li>
-            <li><a href="#proyectos">Proyectos</a></li>
-            <li><a href="#section-form">Formulario</a></li>
-            <li><a href="#piedepagina">Contacto</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
+            <li><a href="#card-container">Proyectos</a></li>
+            <li><a href="#section-form">Contacto</a></li>
         </ul>
     </nav>
 
@@ -65,36 +65,58 @@
                     conocimientos de diversos lenguajes de programación como Turbo Pascal, RmCobol y Visual FoxPro 9, este último 
                     del cual continúo manteniéndome actualizado en la actualidad.</p>
                 <p class="actualidad">Actualmente, me estoy especializando en el desarrollo web Full Stack, trabajando con 
-                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java y MySQL. Me encanta explorar nuevas herramientas 
+                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java, Python, C# y MySQL. Me encanta explorar nuevas herramientas 
                     y tecnologías para mejorar mis habilidades y ofrecer soluciones innovadoras a los desafíos de desarrollo web.</p>
 
-<!--                 <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
+            <!-- <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
             </div>
         </div>
     </section>
 
-    <section id="proyectos">
-        <div class="container">
-            <h2>Proyectos</h2>
-            <div class="proyect">
-                <img src="./img/fondo1.jpg" alt="Captura de pantalla del proyecto 1">
-                <h3>Proyecto 1</h3>
-                <p>Descripción del proyecto 1. Incluye las tecnologías utilizadas, los desafíos enfrentados y los logros alcanzados.</p>
+    <!-- ************Card responsive********************* --> 
+    <section class="card-container" id="card-container">
+        <div class="card">
+            <img src="./img/fondo1.jpg" alt="Proyecto1">
+            <div class="card-content">
+                <h3>Card 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Sed voluptate beatae non dolor sequi commodi consectetur. 
+                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                    odit dolorum voluptatem quisquam molestiae atque.
+                </p>
+                <a href="" class="btn">Read More</a>
             </div>
-            <div class="proyect">
-                <img src="/img/fondo4.jpg" alt="Captura de pantalla del proyecto 2">
-                <h3>Proyecto 2</h3>
-                <p>Descripción del proyecto 2. Destaca los aspectos más relevantes y el impacto del proyecto.</p>
+        </div>
+
+        <div class="card">
+            <img src="./img/fondo4.jpg" alt="Proyecto1">
+            <div class="card-content">
+                <h3>Card 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Sed voluptate beatae non dolor sequi commodi consectetur. 
+                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                    odit dolorum voluptatem quisquam molestiae atque.
+                    
+                </p>
+                <a href="" class="btn">Read More</a>
             </div>
-            <div class="proyect">
-                <img src="/img/fondo5.jpg" alt="Captura de pantalla del proyecto 3">
-                <h3>Proyecto 3</h3>
-                <p>Descripción del proyecto 3. Destaca los aspectos más relevantes y el impacto del proyecto.</p>
+        </div>
+
+        <div class="card">
+            <img src="./img/fondo5.jpg" alt="Proyecto1">
+            <div class="card-content">
+                <h3>Card 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Sed voluptate beatae non dolor sequi commodi consectetur. 
+                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                    odit dolorum voluptatem quisquam molestiae atque.
+                </p>
+                <a href="" class="btn">Read More</a>
             </div>
-            </div>
+        </div>
     </section>
 
-<!--------- FORMULARIO PARA SER PROXIMO ORADOR ------------>
+    <!----- FORMULARIO PARA SER PROXIMO ORADOR ------------>
     <section id="section-form">
         <h2 class="titulo-form">FORMULARIO DE CONTACTO</h2>
         <!-- <form action="./php/enviar.php" method="post"> -->
