--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <section id="zona1">
         <div class="circle"></div>
         <div class="presentacion">
-            <h2 class="loader"></h2>
             <h1>La Programación</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
             <p class="renglon2">revolución digital que está</p>
@@ -84,7 +83,7 @@
                     Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                     odit dolorum voluptatem quisquam molestiae atque.
                 </p>
-                <a href="" class="btn">Read More</a>
+                <a href="" class="btn">Leer Mas</a>
             </div>
         </div>
 
@@ -96,9 +95,8 @@
                     Sed voluptate beatae non dolor sequi commodi consectetur. 
                     Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                     odit dolorum voluptatem quisquam molestiae atque.
-                    
                 </p>
-                <a href="" class="btn">Read More</a>
+                <a href="" class="btn">Leer Mas</a>
             </div>
         </div>
 
@@ -111,7 +109,7 @@
                     Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                     odit dolorum voluptatem quisquam molestiae atque.
                 </p>
-                <a href="" class="btn">Read More</a>
+                <a href="" class="btn">Leer Mas</a>
             </div>
         </div>
     </section>
