Arreglos en las cards

--- a/index.html
+++ b/index.html
@@ -101,9 +101,36 @@
         </div>
 
         <div class="card">
-            <img src="./img/fondo5.jpg" alt="Proyecto1">
+            <img src="./img/fondo6.jpg" alt="Proyecto1">
             <div class="card-content">
                 <h3>Card 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Sed voluptate beatae non dolor sequi commodi consectetur. 
+                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                    odit dolorum voluptatem quisquam molestiae atque.
+                </p>
+                <a href="" class="btn">Leer Mas</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./img/fondo5.jpg" alt="Proyecto1">
+            <div class="card-content">
+                <h3>Card 4</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Sed voluptate beatae non dolor sequi commodi consectetur. 
+                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                    odit dolorum voluptatem quisquam molestiae atque.
+                </p>
+                <a href="" class="btn">Leer Mas</a>
+            </div>
+        </div>
+
+        <div class="card">
+            
+            <img src="./img/fondo7.jpg" alt="Proyecto5">
+            <div class="card-content">
+                <h3>Card 5</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Sed voluptate beatae non dolor sequi commodi consectetur. 
                     Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
