--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="https://www.fontspace.com/avengeance-font-f13706" rel="stylesheet">  <!-- tipo de los ADVENGERS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
+    <link rel="stylesheet" href="https://www.fontspace.com/avengeance-font-f13706">  <!-- tipo de los ADVENGERS -->
 </head>
 
 <body>
