--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
-    <link rel="stylesheet" href="https://www.fontspace.com/avengeance-font-f13706">  <!-- tipo de los ADVENGERS -->
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://www.fontspace.com/avengeance-font-f13706" rel="stylesheet">  <!-- tipo de los ADVENGERS -->
 </head>
 
 <body>
@@ -27,8 +27,8 @@
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="#sobremi">Sobre Mi</a></li>
-            <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#card-container">Proyectos</a></li>
+            <li><a href="#container-slider">Habilidades</a></li>
+            <li><a href="#container-proyectos">Proyectos</a></li>
             <li><a href="#section-form">Contacto</a></li>
         </ul>
     </nav>
@@ -72,71 +72,151 @@
         </div>
     </section>
 
+
+    <section id="container-slider">
+        <h2>Tecnologias adquiridas</h2>
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide">
+                    <img src="/img/html.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/css2.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/javascript.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/bootstrap.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/Java.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/python.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/mysql.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/postgres.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/cobol.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/turbopascal.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/visualfoxpro.png" alt="">
+                </div>
+
+                <!-- repito las 11 imagenes anteriores -->
+                <div class="slide">
+                    <img src="/img/html.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/css.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/javascript.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/bootstrap.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/Java.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/python.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/mysql.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/postgres.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/svg/cobol.svg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/turbopascal.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/img/visualfoxpro.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- ************Card responsive********************* --> 
-    <section class="card-container" id="card-container">
-        <div class="card">
-            <img src="./img/fondo1.jpg" alt="Proyecto1">
-            <div class="card-content">
-                <h3>Card 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Sed voluptate beatae non dolor sequi commodi consectetur. 
-                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                    odit dolorum voluptatem quisquam molestiae atque.
-                </p>
-                <a href="" class="btn">Leer Mas</a>
+    <section id="container-proyectos">
+        <h2>Algunos Proyectos</h2>
+        <div class="card-container">
+            <div class="card">
+                <img src="./img/fondo1.jpg" alt="Proyecto1">
+                <div class="card-content">
+                    <h3>Card 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sed voluptate beatae non dolor sequi commodi consectetur. 
+                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                        odit dolorum voluptatem quisquam molestiae atque.
+                    </p>
+                    <a href="" class="btn">Leer Mas</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card">
-            <img src="./img/fondo4.jpg" alt="Proyecto1">
-            <div class="card-content">
-                <h3>Card 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Sed voluptate beatae non dolor sequi commodi consectetur. 
-                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                    odit dolorum voluptatem quisquam molestiae atque.
-                </p>
-                <a href="" class="btn">Leer Mas</a>
+            <div class="card">
+                <img src="./img/fondo4.jpg" alt="Proyecto1">
+                <div class="card-content">
+                    <h3>Card 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sed voluptate beatae non dolor sequi commodi consectetur. 
+                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                        odit dolorum voluptatem quisquam molestiae atque.
+                    </p>
+                    <a href="" class="btn">Leer Mas</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card">
-            <img src="./img/fondo6.jpg" alt="Proyecto1">
-            <div class="card-content">
-                <h3>Card 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Sed voluptate beatae non dolor sequi commodi consectetur. 
-                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                    odit dolorum voluptatem quisquam molestiae atque.
-                </p>
-                <a href="" class="btn">Leer Mas</a>
+            <div class="card">
+                <img src="./img/fondo6.jpg" alt="Proyecto1">
+                <div class="card-content">
+                    <h3>Card 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sed voluptate beatae non dolor sequi commodi consectetur. 
+                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                        odit dolorum voluptatem quisquam molestiae atque.
+                    </p>
+                    <a href="" class="btn">Leer Mas</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card">
-            <img src="./img/fondo5.jpg" alt="Proyecto1">
-            <div class="card-content">
-                <h3>Card 4</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Sed voluptate beatae non dolor sequi commodi consectetur. 
-                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                    odit dolorum voluptatem quisquam molestiae atque.
-                </p>
-                <a href="" class="btn">Leer Mas</a>
+            <div class="card">
+                <img src="./img/fondo5.jpg" alt="Proyecto1">
+                <div class="card-content">
+                    <h3>Card 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sed voluptate beatae non dolor sequi commodi consectetur. 
+                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                        odit dolorum voluptatem quisquam molestiae atque.
+                    </p>
+                    <a href="" class="btn">Leer Mas</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card">
-            
-            <img src="./img/fondo7.jpg" alt="Proyecto5">
-            <div class="card-content">
-                <h3>Card 5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Sed voluptate beatae non dolor sequi commodi consectetur. 
-                    Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                    odit dolorum voluptatem quisquam molestiae atque.
-                </p>
-                <a href="" class="btn">Leer Mas</a>
+            <div class="card">
+                <img src="./img/fondo7.jpg" alt="Proyecto5">
+                <div class="card-content">
+                    <h3>Card 5</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sed voluptate beatae non dolor sequi commodi consectetur. 
+                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
+                        odit dolorum voluptatem quisquam molestiae atque.
+                    </p>
+                    <a href="" class="btn">Leer Mas</a>
+                </div>
             </div>
         </div>
     </section>
