--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <input class="apellido" type="text" name="Apellido" placeholder="Apellido" pattern="[a-zA-Z' ]*" required>
             <!-- <input type="tel" name="Telefono" pattern="\d{3}-\d{4}-\d{4}" placeholder="Telefono" required> --->
             <input type="tel" name="Telefono" placeholder="Telefono" pattern="[a-zA-Z0-9' ]*" required>
-            <input class="email" type="email" name="Correo" placeholder="Correo" minlength="8" required>
+            <input class="email" type="email" name="email" placeholder="Correo" minlength="8" required>
             <textarea name="mensaje" placeholder="Escriba aqui su mensaje" minlength="8" required></textarea>
             
             <input type="submit" id="boton" title="Clic para enviar el mail" value="ENVIAR">
