Modificando las card a grid

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Ccompatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="Imagen/jpg" href="/img/NewSoft.jpg">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Portafolio Digital</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -78,72 +79,72 @@
         <div class="slider">
             <div class="slide-track">
                 <div class="slide">
-                    <img src="/img/html.png" alt="">
+                    <img src="/img/html.png" alt="HTML">
                 </div>
                 <div class="slide">
-                    <img src="/img/css2.png" alt="">
+                    <img src="/img/css2.png" alt="CSS">
                 </div>
                 <div class="slide">
-                    <img src="/img/javascript.png" alt="">
+                    <img src="/img/javascript.png" alt="JS">
                 </div>
                 <div class="slide">
-                    <img src="/img/bootstrap.png" alt="">
+                    <img src="/img/bootstrap.png" alt="BOOTSTRAP">
                 </div>
                 <div class="slide">
-                    <img src="/img/Java.png" alt="">
+                    <img src="/img/Java.png" alt="JAVA">
                 </div>
                 <div class="slide">
-                    <img src="/img/python.png" alt="">
+                    <img src="/img/python.png" alt="PYTHON">
                 </div>
                 <div class="slide">
-                    <img src="/img/mysql.png" alt="">
+                    <img src="/img/mysql.png" alt="MYSQL">
                 </div>
                 <div class="slide">
-                    <img src="/img/postgres.png" alt="">
+                    <img src="/img/postgres.png" alt="POSTGRESQL">
                 </div>
                 <div class="slide">
-                    <img src="/img/cobol.png" alt="">
+                    <img src="/img/cobol.png" alt="COBOL">
                 </div>
                 <div class="slide">
-                    <img src="/img/turbopascal.png" alt="">
+                    <img src="/img/turbopascal.png" alt="TURBO PASCAL">
                 </div>
                 <div class="slide">
-                    <img src="/img/visualfoxpro.png" alt="">
+                    <img src="/img/visualfoxpro.png" alt="VISUAL FOXPRO 9">
                 </div>
 
                 <!-- repito las 11 imagenes anteriores -->
                 <div class="slide">
-                    <img src="/img/html.png" alt="">
+                    <img src="/img/html.png" alt="HTML">
                 </div>
                 <div class="slide">
-                    <img src="/img/css.png" alt="">
+                    <img src="/img/css.png" alt="CSS">
                 </div>
                 <div class="slide">
-                    <img src="/img/javascript.png" alt="">
+                    <img src="/img/javascript.png" alt="JS">
                 </div>
                 <div class="slide">
-                    <img src="/img/bootstrap.png" alt="">
+                    <img src="/img/bootstrap.png" alt="BOOTSTRAP">
                 </div>
                 <div class="slide">
-                    <img src="/img/Java.png" alt="">
+                    <img src="/img/Java.png" alt="JAVA">
                 </div>
                 <div class="slide">
-                    <img src="/img/python.png" alt="">
+                    <img src="/img/python.png" alt="PYTHON">
                 </div>
                 <div class="slide">
-                    <img src="/img/mysql.png" alt="">
+                    <img src="/img/mysql.png" alt="MYSQL">
                 </div>
                 <div class="slide">
-                    <img src="/img/postgres.png" alt="">
+                    <img src="/img/postgres.png" alt="POSTGRESQL">
                 </div>
                 <div class="slide">
-                    <img src="/img/svg/cobol.svg" alt="">
+                    <img src="/img/svg/cobol.svg" alt="COBOL">
                 </div>
                 <div class="slide">
-                    <img src="/img/turbopascal.png" alt="">
+                    <img src="/img/turbopascal.png" alt="TURBO PACAL">
                 </div>
                 <div class="slide">
-                    <img src="/img/visualfoxpro.png" alt="">
+                    <img src="/img/visualfoxpro.png" alt="VISUAL FOXPRO 9">
                 </div>
             </div>
         </div>
@@ -154,70 +155,107 @@
     <section id="container-proyectos">
         <h2>Algunos Proyectos</h2>
         <div class="card-container">
+
             <div class="card">
-                <img src="./img/fondo1.jpg" alt="Proyecto1">
-                <div class="card-content">
+                <div class="card-img">
+                    <img src="./img/fondo1.jpg" alt="Proyecto1">
+                </div>
+                <div class="card-title">
                     <h3>Card 1</h3>
+                </div>
+                <div class="card-description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Sed voluptate beatae non dolor sequi commodi consectetur. 
                         Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                         odit dolorum voluptatem quisquam molestiae atque.
                     </p>
-                    <a href="" class="btn">Leer Mas</a>
+                </div>
+                <div class="card-btns">
+                    <a href="" class="btn">Ver Mas</a>
+                    <a href="" class="btn">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./img/fondo4.jpg" alt="Proyecto1">
-                <div class="card-content">
+                <div class="card-img">
+                    <img src="./img/fondo2.jpg" alt="Proyecto2">
+                </div>
+                <div class="card-title">
                     <h3>Card 2</h3>
+                </div>
+                <div class="card-description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Sed voluptate beatae non dolor sequi commodi consectetur. 
                         Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                         odit dolorum voluptatem quisquam molestiae atque.
                     </p>
-                    <a href="" class="btn">Leer Mas</a>
                 </div>
+                <div class="card-btns">
+                    <a href="" class="btn">Ver Mas</a>
+                    <a href="" class="btn">Proyecto</a>
+                </div>                
             </div>
 
             <div class="card">
-                <img src="./img/fondo6.jpg" alt="Proyecto1">
-                <div class="card-content">
+                <div class="card-img">
+                    <img src="/img/fondo10.jpg" alt="Proyecto3">
+                </div>
+                <div class="card-title">
                     <h3>Card 3</h3>
+                </div>
+                <div class="card-description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Sed voluptate beatae non dolor sequi commodi consectetur. 
                         Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                         odit dolorum voluptatem quisquam molestiae atque.
                     </p>
-                    <a href="" class="btn">Leer Mas</a>
+                </div>
+                <div class="card-btns">
+                    <a href="" class="btn">Ver Mas</a>
+                    <a href="" class="btn">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./img/fondo5.jpg" alt="Proyecto1">
-                <div class="card-content">
+                <div class="card-img">
+                    <img src="./img/fondo4.jpg" alt="Proyecto4">
+                </div>
+                <div class="card-title">
                     <h3>Card 4</h3>
+                </div>
+                <div class="card-description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Sed voluptate beatae non dolor sequi commodi consectetur. 
                         Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                         odit dolorum voluptatem quisquam molestiae atque.
                     </p>
-                    <a href="" class="btn">Leer Mas</a>
+                </div>
+                <div class="card-btns">
+                    <a href="" class="btn">Ver Mas</a>
+                    <a href="" class="btn">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./img/fondo7.jpg" alt="Proyecto5">
-                <div class="card-content">
+                <div class="card-img">
+                    <img src="./img/fondo5.jpg" alt="Proyecto5">
+                </div>
+                <div class="card-title">
                     <h3>Card 5</h3>
+                </div>
+                <div class="card-description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Sed voluptate beatae non dolor sequi commodi consectetur. 
                         Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
                         odit dolorum voluptatem quisquam molestiae atque.
                     </p>
-                    <a href="" class="btn">Leer Mas</a>
+                </div>
+                <div class="card-btns">
+                    <a href="" class="btn">Ver Mas</a>
+                    <a href="" class="btn">Proyecto</a>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -247,6 +285,7 @@
                 <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub" target="_blank">GitHub</a></li>
                 <li><a href="https://www.facebook.com/joseluis.espinola1" title="Ir a Facebook" target="_blank">Facebook</a></li>
+                <li><a href="https://cvjoseluisespinola.netlify.app/" title="Ver Curriculum Vitae" target="_blank">Ver CV</a></li>
             </ul>
         </div>
         <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p>
