Retoques en responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Barra de navegacion o NavBar -->
-    <nav>
+    <nav class="navbar">
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
@@ -281,12 +281,12 @@
         <p class="contac">Contacto</p>
         <div class="container">
             <p class="mimail">jle36@hotmail.com - Cel. +54-3487-616158</p>
-            <ul class="social-links">
+            <ol class="social-links">
                 <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub" target="_blank">GitHub</a></li>
                 <li><a href="https://www.facebook.com/joseluis.espinola1" title="Ir a Facebook" target="_blank">Facebook</a></li>
                 <li><a href="https://cvjoseluisespinola.netlify.app/" title="Ver Curriculum Vitae" target="_blank">Ver CV</a></li>
-            </ul>
+            </ol>
         </div>
         <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p>
     </footer>
