Arreglando el Menu Hamburguesa

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Portafolio Digital</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="https://www.fontspace.com/avengeance-font-f13706" rel="stylesheet">  <!-- tipo de los ADVENGERS -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!--  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://www.fontspace.com/avengeance-font-f13706" rel="stylesheet"> -->  <!-- tipo de los ADVENGERS -->
 </head>
 
 <body>
@@ -58,8 +58,7 @@
         <div class="container">
             <h2>Sobre mí</h2>
             <div class="sobremi-content">
-                <img src="./img/telegram_logo.png" alt="Mi foto de perfil">
-
+                <img src="./img/telegram_logo.png" alt="Foto de perfil">
                 <p class="historiamia">¡Hola!, soy un apasionado desarrollador Full Stack con experiencia tanto en diseño web 
                     como en programación. Mi formación incluye estudios en Ingeniería de Sistemas (hasta 3er año), donde adquirí 
                     conocimientos de diversos lenguajes de programación como Turbo Pascal, RmCobol y Visual FoxPro 9, este último 
@@ -67,8 +66,7 @@
                 <p class="actualidad">Actualmente, me estoy especializando en el desarrollo web Full Stack, trabajando con 
                     tecnologías como HTML, CSS, Bootstrap, JavaScript, Java, Python, C# y MySQL. Me encanta explorar nuevas herramientas 
                     y tecnologías para mejorar mis habilidades y ofrecer soluciones innovadoras a los desafíos de desarrollo web.</p>
-
-            <!-- <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
+                <!-- <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
             </div>
         </div>
     </section>
@@ -263,7 +261,7 @@
     <section id="section-form">
         <h2 class="titulo-form">FORMULARIO DE CONTACTO</h2>
         <!-- <form action="./php/enviar.php" method="post"> -->
-        <form action="https://formsubmit.co/jle36@hotmail.com" method="POST" target="_blank">		
+        <form action="https://formsubmit.co/jle36@hotmail.com" method="POST" target="_blank">
             <p class="anotate">Puedes hacerme llegar tu inquietud a traves de <abbr title="attribute">este</abbr> formulario!</p>
             <input class="nombre" type="text" name="Nombre" placeholder="Nombre" pattern="[a-zA-Z' ]*" required>
             <input class="apellido" type="text" name="Apellido" placeholder="Apellido" pattern="[a-zA-Z' ]*" required>
