Poniendo los proyectos

--- a/index.html
+++ b/index.html
@@ -156,101 +156,114 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./img/fondo1.jpg" alt="Proyecto1">
+                    <img src="/img/Oradores/orador1.jpg" alt="Proyecto1">
                 </div>
                 <div class="card-title">
-                    <h3>Card 1</h3>
+                    <h3>Conferencia Bs As</h3>
                 </div>
                 <div class="card-description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Sed voluptate beatae non dolor sequi commodi consectetur. 
-                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                        odit dolorum voluptatem quisquam molestiae atque.
+                    <p>Conferencia Bs As, es un proyecto de Trabajo Integrador Final, presentado en CODO A CODO. 
+                       Se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, BOOTSTRAP, MYSQL, bajo la IDE de INTELLIJ. 
+                       En dicha página podrás registrarte, loguearte, enviar un formulario de contacto, sacar un ticket, 
+                       consultar los ticket vendido, los oradores que se han inscripto y los usuarios registrados.
+                       La cursada fue en el segundo semestre del año 2023.-
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="" class="btn">Ver Mas</a>
-                    <a href="" class="btn">Proyecto</a>
+                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="https://www.youtube.com/watch?v=INVaEi8hjII&ab_channel=JoseLuisEspinola" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./img/fondo2.jpg" alt="Proyecto2">
+                    <img src="/img/pasteleria/pasteleria1.jpg" alt="Proyecto2">
                 </div>
                 <div class="card-title">
-                    <h3>Card 2</h3>
+                    <h3>Pasteleria Ely</h3>
                 </div>
                 <div class="card-description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Sed voluptate beatae non dolor sequi commodi consectetur. 
-                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                        odit dolorum voluptatem quisquam molestiae atque.
+                    <p>Pastelería Ely, es un proyecto que se encuentra funcionando. Se usaron 
+                       las siguientes técnologias: HTML, CSS, JAVASCRIPT, bajo la IDE de VISUAL 
+                       STUDIO CODE. La página, proporciona un calculador repostero. Se basa 
+                       en la pastelería de origen artesanal donde la pasión por la repostería 
+                       cobra vida. Se mustran los deliciosos pasteles, desde brownies, cupcakes, 
+                       pastafloras rellenas, hasta pasteles de frutas irresistibles. Tambien puedes
+                       enviar un mail mediante un formulario, haciendo saber tus inquietudes.
+                       Fecha de creación: Octubre 2023.-
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="" class="btn">Ver Mas</a>
-                    <a href="" class="btn">Proyecto</a>
+                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="https://pasteleriaely.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>                
             </div>
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/fondo10.jpg" alt="Proyecto3">
+                    <img src="/img/peluqueria/peluqueria1.jpg" alt="Proyecto3">
                 </div>
                 <div class="card-title">
-                    <h3>Card 3</h3>
+                    <h3>Curso de peluquería</h3>
                 </div>
                 <div class="card-description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Sed voluptate beatae non dolor sequi commodi consectetur. 
-                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                        odit dolorum voluptatem quisquam molestiae atque.
+                    <p>Curso de peluquería, es un proyecto pensado para cursos de peluquería. 
+                        Se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, bajo la 
+                        IDE de VISUAL STUDIO CODE. En la página podras sacar tus dudas con 
+                        preguntas ya contestadas, observar los distintos cursos con sus respectivos 
+                        costos. También puedes enviar un mail, para que te contacten.
+                        Fecha de creación: Enero 2024.-
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="" class="btn">Ver Mas</a>
-                    <a href="" class="btn">Proyecto</a>
+                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="https://cursopeluqueria.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./img/fondo4.jpg" alt="Proyecto4">
+                    <img src="/img/ubinetsa/ubinetsa1.jpg" alt="Proyecto4">
                 </div>
                 <div class="card-title">
-                    <h3>Card 4</h3>
+                    <h3>Ubinet S.A.</h3>
                 </div>
                 <div class="card-description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Sed voluptate beatae non dolor sequi commodi consectetur. 
-                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                        odit dolorum voluptatem quisquam molestiae atque.
+                    <p>Ubinet S.A., es un proyecto pensado para localización y seguimiento
+                       vehícular. Se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, 
+                       bajo la IDE de VISUAL STUDIO CODE. En la página se podrá registrarse y 
+                       tener acceso mediante login, también podras enviar un mail mediante un 
+                       formulario de contacto y ver "quienes somos" para enterarte sobre la empresa.
+                       Fecha de creación: Junio 2024.-
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="" class="btn">Ver Mas</a>
-                    <a href="" class="btn">Proyecto</a>
+                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="https://ubinetsa.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./img/fondo5.jpg" alt="Proyecto5">
+                    <img src="/img/cuebanita/cuebanita1.jpg" alt="Proyecto5">
                 </div>
                 <div class="card-title">
-                    <h3>Card 5</h3>
+                    <h3>CueBanita</h3>
                 </div>
                 <div class="card-description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Sed voluptate beatae non dolor sequi commodi consectetur. 
-                        Porro, quae commodi numquam illo corrupti, assumenda voluptate, 
-                        odit dolorum voluptatem quisquam molestiae atque.
+                    <p>CueBanita, es un proyecto de Trabajo Integrador Final, presentado en 
+                       CODO A CODO. Se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, 
+                       BOOTSTRAP, MYSQL, bajo la IDE de INTELLIJ. La página trata (como su nombre 
+                       lo dice), de un lugar donde se pueden ver películas gratis. En dicha web, 
+                       tendrás la posibilidad de registrarte, loguearte, y contactarte mediante un 
+                       formulario de contacto.
+                       Fecha de creación: Junio 2024.
+                       La cursada fue en el primer semestre del año 2024.-
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="" class="btn">Ver Mas</a>
-                    <a href="" class="btn">Proyecto</a>
+                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="https://tp-python-full-stack-front2024.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
 
